# p4py

./: .bazelrc  .editorconfig  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  dev.sh  dprint.json  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bazel.yml  devcontainer.yml  docs.yml  lint.yml
docs/: architecture.md  conf.py  ebpf-model-coverage.md  index.md  p4-spec-coverage.md  roadmap.md  v1model-coverage.md
docs/dev/: guide.md
docs/superpowers/specs/: 2026-03-28-testgen-migration-design.md
e2e_tests/: BUILD.bazel  stf_runner.py  stf_runner_test.py  stf_test.bzl
e2e_tests/basic_forward/: BUILD.bazel  basic_forward.py  basic_forward.stf  basic_forward_diff_test.py  basic_forward_testgen_test.py
examples/: BUILD.bazel  basic_forward.p4  basic_forward.py
examples/basic_forward/: BUILD.bazel  basic_forward.p4  basic_forward_diff_test.py  basic_forward_golden_test.py  basic_forward_testgen_test.py
patches/: BUILD.bazel  p4c_testgen_ebpf.patch
src/p4py/: BUILD.bazel  __init__.py  compiler.py  ir.py  lang.py
src/p4py/arch/: __init__.py  base.py  ebpf_model.py  v1model.py
src/p4py/backend/: __init__.py  p4.py
src/p4py/compiler/: __init__.py  compiler.py
src/p4py/emitter/: __init__.py  p4.py
src/p4py/ir/: __init__.py  nodes.py
src/p4py/lang/: __init__.py  _blocks.py  _types.py  bit.py  core.py  header.py  struct.py
src/p4py/sim/: __init__.py  engine.py  simulator.py
tests/: BUILD.bazel  test_integration.py  test_version.py
tests/arch/: test_v1model.py
tests/backend/: test_p4.py
tests/compiler/: BUILD.bazel  test_compiler.py
tests/e2e/: BUILD.bazel  README.md
tests/e2e/basic_forward/: basic_forward_diff_test.py  basic_forward_testgen_test.py
tests/e2e/examples/basic_forward/: BUILD.bazel  basic_forward_diff_test.py  basic_forward_testgen_test.py
tests/e2e/p4_16_samples/: BUILD.bazel  basic_routing_bmv2.p4  basic_routing_bmv2.py  basic_routing_bmv2.stf  init_ebpf.p4  init_ebpf.py  init_ebpf.stf  table_entries_exact_bmv2.p4  table_entries_exact_bmv2.py  table_entries_exact_bmv2.stf  table_entries_exact_ternary_bmv2.p4  table_entries_exact_ternary_bmv2.py  table_entries_exact_ternary_bmv2.stf  table_entries_lpm_bmv2.p4  table_entries_lpm_bmv2.py  table_entries_lpm_bmv2.stf  table_entries_ternary_bmv2.p4  table_entries_ternary_bmv2.py  table_entries_ternary_bmv2.stf
tests/e2e/p4_16_samples/basic_routing_bmv2/: BUILD.bazel  basic_routing_bmv2.p4  basic_routing_bmv2.py  basic_routing_bmv2.stf  basic_routing_bmv2_diff_test.py  basic_routing_bmv2_golden_test.py  basic_routing_bmv2_sim_test.py  basic_routing_bmv2_testgen_test.py
tests/e2e/sai_p4/: BUILD.bazel  README.md  tor.p4  wbb.p4  wbb.stf
tests/e2e/sai_p4/fixed/: headers.py  ids.py  l3_admit.py  metadata.py  packet_io.py  routing.py  vlan.py
tests/e2e/sai_p4/instantiations/google/: acl_ingress.py  acl_pre_ingress.py  acl_wbb_ingress.py  bitwidths.py  tor.py  wbb.py
tests/infra/: BUILD.bazel  golden_runner.py  golden_test.bzl  p4testgen_runner.py  p4testgen_test.bzl  stf_runner.py  stf_runner_test.py  stf_sim_runner.py  stf_test.bzl
tests/ir/: BUILD.bazel  test_nodes.py
tests/lang/: BUILD.bazel  test_bit.py  test_header.py  test_struct.py
tests/sim/: test_sim.py
tests/unit/: BUILD.bazel  test_integration.py  test_version.py
tests/unit/arch/: BUILD.bazel  test_base.py  test_ebpf_model.py  test_v1model.py
tests/unit/backend/: BUILD.bazel  test_checksum_emit.py  test_egress_emit.py  test_p4.py
tests/unit/compiler/: BUILD.bazel  test_action_call.py  test_action_selector.py  test_checksum_compile.py  test_compiler.py  test_egress_compile.py  test_expression_table_key.py  test_file_scope_action.py  test_inout_action_param.py  test_literal_table_key.py  test_local_var.py  test_named_type_param.py  test_partial_action.py  test_table_apply_hit.py
tests/unit/emitter/: BUILD.bazel  test_checksum_emit.py  test_declarations_emit.py  test_egress_emit.py  test_p4.py
tests/unit/ir/: BUILD.bazel  test_declarations.py  test_nodes.py
tests/unit/lang/: BUILD.bazel  test_bit.py  test_header.py  test_struct.py  test_typedef.py
tests/unit/sim/: BUILD.bazel  test_checksum_sim.py  test_ebpf_sim.py  test_egress_sim.py  test_sim.py  test_std_meta_table_key.py
tools/: docs.sh  format.sh  lint.sh
