module(
    name = "p4py",
)

bazel_dep(name = "p4c", version = "1.2.5.11")

# Enable the eBPF target in p4testgen (BCR default is bmv2-only).
single_version_override(
    module_name = "p4c",
    patch_strip = 1,
    patches = ["//bazel/patches:p4c_testgen_ebpf.patch"],
)

bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
