[project]
name = "p4py"
version = "0.0.1"
description = "A Python eDSL for P4 network programming."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]
