[project]
name = "p4py"
version = "0.0.1"
description = "A Python eDSL for P4 network programming."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# P4 eDSL uses lowercase class names (header, struct) and P4-style field names.
"src/p4py/lang/header.py" = ["N801"]
"src/p4py/lang/struct.py" = ["N801"]
"src/p4py/arch/v1model.py" = ["N801"]
"tests/lang/*" = ["N801", "N815"]
"tests/arch/*" = ["N801", "N802", "E743"]
"tests/compiler/*" = ["N801", "N802", "N815", "E743"]
