[project]
name = "p4py"
version = "0.0.1"
description = "A Python eDSL for P4 network programming."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = ["absl-py>=2.0", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]

[tool.ruff]
src = ["src", "tests", "examples"]
line-length = 88

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# P4 eDSL uses lowercase class names (header, struct) and P4-style field names.
"src/p4py/lang.py" = ["N801", "E741"]
"src/p4py/lang/_types.py" = ["N801"]
"src/p4py/arch/v1model.py" = ["N801", "E501"]
"src/p4py/compiler.py" = ["SIM102", "SIM114", "E501"]
"src/p4py/emitter/p4.py" = ["SIM108"]
"src/p4py/sim/engine.py" = ["E741", "SIM102"]
"tests/unit/lang/*" = ["N801", "N806", "N815", "N816"]
"tests/unit/arch/*" = ["N801", "N802", "E743"]
"tests/unit/compiler/*" = ["N801", "N802", "N815", "E743"]
"tests/unit/emitter/*" = ["N801", "N802", "N815"]
"tests/unit/backend/*" = ["N801", "N802", "N815"]
"tests/unit/sim/*" = ["N801", "N802", "N815"]
"tests/unit/test_integration.py" = ["N801", "N802", "N815"]
"examples/*" = ["N801", "N802", "N815"]
"tests/e2e/*" = ["N801", "N802", "N806", "N815", "N816", "E501", "E741", "B905", "B007"]
# Pre-existing issues in test infra; clean up separately.
"tests/infra/*" = ["B905", "SIM108", "RUF005", "E501"]
