load("@rules_python//python:defs.bzl", "py_library", "py_test")

exports_files(
    ["stf_runner.py"],
    visibility = ["//e2e_tests:__subpackages__"],
)

py_library(
    name = "stf_runner",
    srcs = ["stf_runner.py"],
    visibility = ["//e2e_tests:__subpackages__"],
)

py_test(
    name = "stf_runner_test",
    srcs = ["stf_runner_test.py"],
    deps = [":stf_runner"],
)
