load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "basic_forward",
    srcs = ["basic_forward.py"],
    deps = ["//src/p4py"],
)

py_test(
    name = "basic_forward_golden_test",
    srcs = ["basic_forward_golden_test.py"],
    data = ["basic_forward.p4"],
    deps = [
        ":basic_forward",
        "//src/p4py",
    ],
)
