load("@rules_python//python:defs.bzl", "py_library")
load("//tests/infra:golden_test.bzl", "golden_test")

py_library(
    name = "basic_forward",
    srcs = ["basic_forward.py"],
    deps = ["//src/p4py"],
)

golden_test(
    name = "basic_forward_golden_test",
    p4_module = "examples.basic_forward.basic_forward",
    p4_library = ":basic_forward",
    golden_file = "basic_forward.p4",
)
