load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "stf_runner",
    srcs = ["stf_runner.py"],
    visibility = [
        "//examples:__subpackages__",
        "//tests:__subpackages__",
    ],
)

py_test(
    name = "stf_runner_test",
    srcs = ["stf_runner_test.py"],
    deps = [
        ":stf_runner",
        "@pip//absl_py",
    ],
)

exports_files(
    [
        "stf_sim_runner.py",
        "golden_runner.py",
        "p4testgen_runner.py",
    ],
    visibility = [
        "//examples:__subpackages__",
        "//tests:__subpackages__",
    ],
)

py_library(
    name = "stf_sim_runner",
    srcs = ["stf_sim_runner.py"],
    visibility = [
        "//examples:__subpackages__",
        "//tests:__subpackages__",
    ],
    deps = [
        ":stf_runner",
        "//src/p4py",
    ],
)

py_library(
    name = "golden_runner",
    srcs = ["golden_runner.py"],
    visibility = [
        "//examples:__subpackages__",
        "//tests:__subpackages__",
    ],
    deps = ["//src/p4py"],
)

py_library(
    name = "p4testgen_runner",
    srcs = ["p4testgen_runner.py"],
    visibility = [
        "//examples:__subpackages__",
        "//tests:__subpackages__",
    ],
    deps = [
        ":stf_runner",
        "//src/p4py",
    ],
)
