load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_version",
    srcs = ["test_version.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_integration",
    srcs = ["test_integration.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)
