load("@rules_python//python:defs.bzl", "py_library")
load("//tests/infra:golden_test.bzl", "golden_test")
load("//tests/infra:p4testgen_test.bzl", "p4testgen_test")
load("//tests/infra:stf_test.bzl", "stf_test")

py_library(
    name = "basic_routing_bmv2",
    srcs = ["basic_routing_bmv2.py"],
    deps = ["//src/p4py"],
)

golden_test(
    name = "basic_routing_bmv2_golden_test",
    golden_file = "basic_routing_bmv2.p4",
    p4_library = ":basic_routing_bmv2",
    p4_module = "tests.e2e.p4_16_samples.basic_routing_bmv2",
)

stf_test(
    name = "basic_routing_bmv2_stf_test",
    p4_library = ":basic_routing_bmv2",
    p4_module = "tests.e2e.p4_16_samples.basic_routing_bmv2",
    stf_file = "basic_routing_bmv2.stf",
)

p4testgen_test(
    name = "basic_routing_bmv2_p4testgen_test",
    p4_library = ":basic_routing_bmv2",
    p4_module = "tests.e2e.p4_16_samples.basic_routing_bmv2",
)

py_library(
    name = "init_ebpf",
    srcs = ["init_ebpf.py"],
    deps = ["//src/p4py"],
)

golden_test(
    name = "init_ebpf_golden_test",
    golden_file = "init_ebpf.p4",
    p4_library = ":init_ebpf",
    p4_module = "tests.e2e.p4_16_samples.init_ebpf",
)

p4testgen_test(
    name = "init_ebpf_p4testgen_test",
    p4_library = ":init_ebpf",
    p4_module = "tests.e2e.p4_16_samples.init_ebpf",
)

py_library(
    name = "table_entries_exact_bmv2",
    srcs = ["table_entries_exact_bmv2.py"],
    deps = ["//src/p4py"],
)

golden_test(
    name = "table_entries_exact_bmv2_golden_test",
    golden_file = "table_entries_exact_bmv2.p4",
    p4_library = ":table_entries_exact_bmv2",
    p4_module = "tests.e2e.p4_16_samples.table_entries_exact_bmv2",
)

p4testgen_test(
    name = "table_entries_exact_bmv2_p4testgen_test",
    p4_library = ":table_entries_exact_bmv2",
    p4_module = "tests.e2e.p4_16_samples.table_entries_exact_bmv2",
)
