load("@rules_python//python:defs.bzl", "py_library")
load("//tests/infra:golden_test.bzl", "golden_test")
load("//tests/infra:p4testgen_test.bzl", "p4testgen_test")

py_library(
    name = "wbb",
    srcs = glob(["**/*.py"]),
    deps = ["//src/p4py"],
)

golden_test(
    name = "wbb_golden_test",
    golden_file = "wbb.p4",
    p4_library = ":wbb",
    p4_module = "tests.e2e.sai_p4.instantiations.google.wbb",
)

# TODO: Enable once clone() simulation is implemented. P4Testgen generates
# 3 test cases that all exercise clone (copy/trap actions), which our sim
# stubs as no-op. The emitted P4 compiles and P4Testgen runs successfully.
# p4testgen_test(
#     name = "wbb_p4testgen_test",
#     p4_library = ":wbb",
#     p4_module = "tests.e2e.sai_p4.instantiations.google.wbb",
# )
