load("@rules_python//python:defs.bzl", "py_library")
load("//tests/infra:golden_test.bzl", "golden_test")
load("//tests/infra:p4testgen_test.bzl", "p4testgen_test")
load("//tests/infra:stf_test.bzl", "stf_test")

py_library(
    name = "wbb",
    srcs = glob(["**/*.py"]),
    deps = ["//src/p4py"],
)

golden_test(
    name = "wbb_golden_test",
    golden_file = "wbb.p4",
    p4_library = ":wbb",
    p4_module = "tests.e2e.sai_p4.instantiations.google.wbb",
)

stf_test(
    name = "wbb_stf_test",
    p4_library = ":wbb",
    p4_module = "tests.e2e.sai_p4.instantiations.google.wbb",
    stf_file = "wbb.stf",
)

p4testgen_test(
    name = "wbb_p4testgen_test",
    p4_library = ":wbb",
    p4_module = "tests.e2e.sai_p4.instantiations.google.wbb",
)

golden_test(
    name = "tor_golden_test",
    golden_file = "tor.p4",
    p4_library = ":wbb",
    p4_module = "tests.e2e.sai_p4.instantiations.google.tor",
)
