load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_v1model",
    srcs = ["test_v1model.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_ebpf_model",
    srcs = ["test_ebpf_model.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_base",
    srcs = ["test_base.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)
