load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_compiler",
    srcs = ["test_compiler.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_egress_compile",
    srcs = ["test_egress_compile.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_checksum_compile",
    srcs = ["test_checksum_compile.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_local_var",
    srcs = ["test_local_var.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_literal_table_key",
    srcs = ["test_literal_table_key.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_named_type_param",
    srcs = ["test_named_type_param.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_expression_table_key",
    srcs = ["test_expression_table_key.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_table_apply_hit",
    srcs = ["test_table_apply_hit.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_inout_action_param",
    srcs = ["test_inout_action_param.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_file_scope_action",
    srcs = ["test_file_scope_action.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)
