load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_nodes",
    srcs = ["test_nodes.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)

py_test(
    name = "test_declarations",
    srcs = ["test_declarations.py"],
    deps = [
        "//src/p4py",
        "@pip//absl_py",
    ],
)
