load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//tests/infra:stf_test.bzl", "stf_test")

py_library(
    name = "basic_forward",
    srcs = ["basic_forward.py"],
    deps = ["//src/p4py"],
)

stf_test(
    name = "basic_forward_stf_test",
    p4_module = "tests.e2e.examples.basic_forward.basic_forward",
    p4_library = ":basic_forward",
    stf_file = "basic_forward.stf",
)

py_test(
    name = "basic_forward_testgen_test",
    timeout = "moderate",
    srcs = ["basic_forward_testgen_test.py"],
    tags = ["e2e"],
    deps = [
        ":basic_forward",
        "//src/p4py",
        "//tests/infra:stf_runner",
    ],
)
