load("@rules_python//python:defs.bzl", "py_library")
load("//tests/infra:p4testgen_test.bzl", "p4testgen_test")
load("//tests/infra:stf_test.bzl", "stf_test")

py_library(
    name = "basic_forward",
    srcs = ["basic_forward.py"],
    deps = ["//src/p4py"],
)

stf_test(
    name = "basic_forward_stf_test",
    p4_module = "tests.e2e.examples.basic_forward.basic_forward",
    p4_library = ":basic_forward",
    stf_file = "basic_forward.stf",
)

p4testgen_test(
    name = "basic_forward_p4testgen_test",
    p4_module = "tests.e2e.examples.basic_forward.basic_forward",
    p4_library = ":basic_forward",
)
